# python-project-52

./: Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt  ruff.toml
locale/ru/LC_MESSAGES/: django.po
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: tasks.json
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py  0003_alter_task_executor_alter_task_labels.py
task_manager/templates/: base.html  index.html  login.html
task_manager/templates/labels/: create.html  delete.html  index.html
task_manager/templates/statuses/: create.html  delete.html  index.html
task_manager/templates/tasks/: create.html  delete.html  index.html  task_detail.html
task_manager/templates/users/: create.html  delete.html  index.html
task_manager/users/: admin.py  forms.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: users.json
